--- a/globalnav.html
+++ b/globalnav.html
@@ -335,7 +335,11 @@
 			</ul>
 		</div>
 	</nav>
+	
+	<!-- Added so you can see the scroll animation -->
 	<div style="height:1000vh"></div>
+	
+	
 	<script src="https://athena.fiveatoms.com/assets/js/lib/jquery.js" charset="utf-8"></script>
 	<script>
 		// header dropdown menus
